@@ -18,6 +18,10 @@ from 2.6.0 to 2.6.1
 - fixed missing mark for data CRC when the data is a delta patch, leading
   sequential reading to fail when a delta patch is encontered
 - fixed bug in XML output about deleted entries
+- fixed XML output to be identical to the one of dar 2.5.x for deleted
+  entries.
+- Showing the deleted date in 'mtime' field for deleted entries in XML
+  output
 
 from 2.5.x to 2.6.0
 - new feature: support for binary delta in incremental/differential backups
